Use RelPath in getBasePathOfAncestorTarget signature
Summary: Previous diff adds an assertion that path is relative, so this change should be safe (if previous is correct).

Reviewed By: bobyangyf

shipit-source-id: 905027758fcbffb6f822f48a2f167a2cd27e2a9c