@@ -34,6 +34,7 @@ import com.facebook.buck.artifact_cache.NoopArtifactCache;
 import com.facebook.buck.core.cell.Cells;
 import com.facebook.buck.core.cell.TestCellBuilder;
 import com.facebook.buck.core.config.FakeBuckConfig;
+import com.facebook.buck.core.filesystems.RelPath;
 import com.facebook.buck.core.graph.transformation.executor.DepsAwareExecutor;
 import com.facebook.buck.core.graph.transformation.executor.impl.DefaultDepsAwareExecutor;
 import com.facebook.buck.core.graph.transformation.model.ComputeResult;
@@ -80,7 +81,6 @@ import com.google.common.util.concurrent.MoreExecutors;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.UnsupportedEncodingException;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.SortedMap;
@@ -273,10 +273,10 @@ public class TargetsCommandTest {
 
     TargetGraph targetGraph = TargetGraphFactory.newInstance(nodes);
 
-    ImmutableSet<Path> referencedFiles;
+    ImmutableSet<RelPath> referencedFiles;
 
     // No target depends on the referenced file.
-    referencedFiles = ImmutableSet.of(Paths.get("excludesrc/CannotFind.java"));
+    referencedFiles = ImmutableSet.of(RelPath.get("excludesrc/CannotFind.java"));
     SortedMap<String, TargetNode<?>> matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
@@ -289,7 +289,7 @@ public class TargetsCommandTest {
     assertTrue(matchingBuildRules.isEmpty());
 
     // Only test-android-library target depends on the referenced file.
-    referencedFiles = ImmutableSet.of(Paths.get("javatest/TestJavaLibrary.java"));
+    referencedFiles = ImmutableSet.of(RelPath.get("javatest/TestJavaLibrary.java"));
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
@@ -303,7 +303,7 @@ public class TargetsCommandTest {
 
     // The test-android-library target indirectly depends on the referenced file,
     // while test-java-library target directly depends on the referenced file.
-    referencedFiles = ImmutableSet.of(Paths.get("javasrc/JavaLibrary.java"));
+    referencedFiles = ImmutableSet.of(RelPath.get("javasrc/JavaLibrary.java"));
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
@@ -318,7 +318,7 @@ public class TargetsCommandTest {
         matchingBuildRules.keySet());
 
     // Verify that BUCK files show up as referenced files.
-    referencedFiles = ImmutableSet.of(Paths.get("javasrc/BUCK"));
+    referencedFiles = ImmutableSet.of(RelPath.get("javasrc/BUCK"));
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
@@ -335,7 +335,7 @@ public class TargetsCommandTest {
     // Output target only need to depend on one referenced file.
     referencedFiles =
         ImmutableSet.of(
-            Paths.get("javatest/TestJavaLibrary.java"), Paths.get("othersrc/CannotFind.java"));
+            RelPath.get("javatest/TestJavaLibrary.java"), RelPath.get("othersrc/CannotFind.java"));
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
@@ -403,7 +403,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("javatest/TestJavaLibrary.java"))),
+            Optional.of(ImmutableSet.of(RelPath.get("javatest/TestJavaLibrary.java"))),
             Optional.of(ImmutableSet.of(BuildTargetFactory.newInstance("//javasrc:java-library"))),
             Optional.empty(),
             false,
@@ -429,7 +429,7 @@ public class TargetsCommandTest {
     SortedMap<String, TargetNode<?>> matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/bar.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/bar.m"))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -441,7 +441,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/foo.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/foo.m"))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -475,7 +475,7 @@ public class TargetsCommandTest {
     SortedMap<String, TargetNode<?>> matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/bar.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/bar.m"))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -487,7 +487,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/foo.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/foo.m"))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -499,7 +499,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/testfoo.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/testfoo.m"))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -511,16 +511,18 @@ public class TargetsCommandTest {
   @Test
   public void testPathsUnderDirectories() {
     ProjectFilesystem projectFilesystem = new FakeProjectFilesystem();
-    Path resDir = Paths.get("some/resources/dir");
+    RelPath resDir = RelPath.get("some/resources/dir");
     BuildTarget androidResourceTarget = BuildTargetFactory.newInstance("//:res");
     TargetNode<?> androidResourceNode =
-        AndroidResourceBuilder.createBuilder(androidResourceTarget).setRes(resDir).build();
+        AndroidResourceBuilder.createBuilder(androidResourceTarget)
+            .setRes(resDir.getPath())
+            .build();
 
-    Path genSrc = resDir.resolve("foo.txt");
+    RelPath genSrc = RelPath.of(resDir.resolve("foo.txt"));
     BuildTarget genTarget = BuildTargetFactory.newInstance("//:gen");
     TargetNode<?> genNode =
         GenruleBuilder.newGenruleBuilder(genTarget)
-            .setSrcs(ImmutableList.of(FakeSourcePath.of(projectFilesystem, genSrc)))
+            .setSrcs(ImmutableList.of(FakeSourcePath.of(projectFilesystem, genSrc.getPath())))
             .setOut("out")
             .build();
 
@@ -532,7 +534,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(resDir.resolve("some_resource.txt"))),
+            Optional.of(ImmutableSet.of(RelPath.of(resDir.resolve("some_resource.txt")))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -545,7 +547,9 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get(resDir + "_extra").resolve("some_resource.txt"))),
+            Optional.of(
+                ImmutableSet.of(
+                    RelPath.of(RelPath.get(resDir + "_extra").resolve("some_resource.txt")))),
             Optional.empty(),
             Optional.empty(),
             false,
@@ -624,7 +628,7 @@ public class TargetsCommandTest {
     SortedMap<String, TargetNode<?>> matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/bar.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/bar.m"))),
             Optional.empty(),
             Optional.empty(),
             true,
@@ -636,7 +640,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/testfoo1.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/testfoo1.m"))),
             Optional.empty(),
             Optional.empty(),
             true,
@@ -648,7 +652,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("foo/testfoo2.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("foo/testfoo2.m"))),
             Optional.empty(),
             Optional.empty(),
             true,
@@ -662,7 +666,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("testlib/testlib.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("testlib/testlib.m"))),
             Optional.empty(),
             Optional.empty(),
             true,
@@ -681,7 +685,7 @@ public class TargetsCommandTest {
     matchingBuildRules =
         targetsCommand.getMatchingNodes(
             targetGraph,
-            Optional.of(ImmutableSet.of(Paths.get("testlib/testlib-test.m"))),
+            Optional.of(ImmutableSet.of(RelPath.get("testlib/testlib-test.m"))),
             Optional.empty(),
             Optional.empty(),
             true,
